# probs

./: .pre-commit-config.yaml  .travis.yml  README.md  conftest.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: test.yml
probs/: __init__.py  counting.py  floats.py  operations.py  rv.py
probs/continuous/: beta.py  exponential.py  gamma.py  inv_gamma.py  laplace.py  lomax.py  normal.py  rv.py  students_t.py  uniform.py
probs/discrete/: bernoulli.py  beta_binomial.py  binomial.py  dice_roll.py  geometric.py  negative_binomial.py  poisson.py  rv.py
tests/: rv_test.py  uniform_test.py
tests/continuous/: normal_test.py
tests/discrete/: binomial_test.py  dice_roll_test.py  rv_test.py
todo/continuous/: beta.py  exponential.py  gamma.py  inv_gamma.py  laplace.py  lomax.py  students_t.py
todo/discrete/: beta_binomial.py  geometric.py  negative_binomial.py  poisson.py
